# react-app

./: .gitignore  ANDROID.md  DESIGNDECISIONS.txt  ISSUES.md  README.md  STARTUP.md  app.json  env-examples.env  index.android.js  index.ejs  index.js  install-client.sh  install-server.sh  main-desktop.js  main-mobile.js  main.js  mix.exs  package.json
android/: settings.gradle
android/app/: BUCK  build.gradle
android/keystores/: BUCK
apps/auth/: mix.exs
apps/browser/: .gitignore  INSTALL.md  README.md  mix.exs
apps/cleanup/: component.js  container.js
apps/core/: routes.js
apps/crawlie/: mix.exs
apps/datomic/: README.md  mix.exs
apps/datomic_export/: .gitignore  README.md  mix.exs
apps/datomic_import/: .gitignore  README.md  mix.exs
apps/datomic_import_parse/: README.md  mix.exs
apps/datomic_link/: README.md  mix.exs
apps/datomic_query/: README.md  mix.exs
apps/datomic_query_translator/: .gitignore  README.md  TODOS.txt  mix.exs
apps/datomic_schema_import/: README.md  mix.exs
apps/datomic_transact/: README.md  mix.exs
apps/datomic_utils/: .gitignore  README.md  mix.exs
apps/dbtest/: channel.ex  dbtest.sh
apps/ex_auth/: mix.exs
apps/exmacaroons/: mix.exs  (+2 more)
apps/zzz_disabled/exmacaroons/native/rustmacaroons/: Cargo.toml  README.md
config/: channel.js  config.exs  context-mobile.js  context-web.js  context.js  datascript.js  example-config.js  example-url.js  rx-datascript.js  transact.js  uuid.js  vanilla-context-web.js  vanilla-rx-datascript.js
docs/: FILES.md  GROUPS.md  IEX.md  IMPORT-EXPORT.md  STARTUP.md
public/: index.html
(+443 files in other folders)
