[package]
name = "rustmacaroons"
version = "0.1.0"
authors = []

[lib]
name = "rustmacaroons"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
rustler = "0.14.0"
rustler_codegen = "0.14.0"
lazy_static = "0.2"
macaroons = "0.3.3"

# sodiumoxide     = "0.0.15"
# libsodium-sys   = "0.0.15"
# rustc-serialize = "^0.3"

# macaroon = "0.1.1"
